--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <head><title>Vexify4</title>
     <head>
       <body>
-        <h1>Vexify4</h1>
+        <h1>Vexify4 epic</h1>
         <body>
           <html>
