--- a/index.html
+++ b/index.html
@@ -1,7 +1,48 @@
 <html>
-  <head><title>Vexify4</title>
-    <head>
-      <body>
-        <h1>Vexify4</h1>
-        <body>
-          <html>
+    <head><title>Vexify4</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="main.css">
+<style>
+.button {
+  background-color: #32a4a8;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+</style>
+<style>
+h1 {
+  text-align: center;
+}
+
+p.image {
+  text-align: left;
+}
+
+p.main {
+  text-align: justify;
+}
+</style>
+    </head>
+    <body>
+        <center><h1>Vexify4</h1>
+        <h2>Programmer,Editor</h2>
+        <hr>
+        <a href="#" class="button">Projects</a>
+        <a href="#" class="button">About</a>
+        <a href="#" class="button">Contact</a>
+        </center>
+        <center>
+            <h2>About me</h2>
+         <p>Hello, I am a programer who makes programs and other</p><p> things.I am the editor/owner of Summerwalk </p><p>Moives.I am also the owner of AL Techonlolgy's</p> 
+         <center>
+             <img src="Vexify4.jpg" alt="Vexify PFP" width="309.5" height="360" style="vertical-align:left;margin:50px 0px">>
+    </body>
+    </html>
