--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@ p.main {
             <h2>About me</h2>
          <p>Hello, I am a programer who makes programs and other</p><p> things.I am the editor/owner of Summerwalk </p><p>Moives.I am also the owner of AL Techonlolgy's</p> 
          <center>
-             <img src="Vexify4.jpg" alt="Vexify PFP" width="309.5" height="360" style="vertical-align:left;margin:50px 0px">>
+             <img src="Vexify4.jpg" alt="Vexify PFP" width="309.5" height="360" style="vertical-align:left;margin:50px 0px">
     </body>
     </html>
