--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ p.main {
         <center><h1>Vexify4</h1>
         <h2>Programmer,Editor</h2>
         <hr>
-        <a href="#" class="button">Projects</a>
-        <a href="#" class="button">About</a>
-        <a href="#" class="button">Contact</a>
+        <a href="projects.html" class="button">Projects</a>
+        <a href="vexify.github.io" class="button">Home</a>
+        <a href="about.html" class="button">About</a>
         </center>
         <center>
             <h2>About me</h2>
