--- a/projects.html
+++ b/projects.html
@@ -33,3 +33,10 @@ p.main {
     </head>
     <body>
         <center><h1>Vexify4</h1>
+            <h2>Programmer,Editor</h2>
+        <hr>
+        <a href="projects.html" class="button">Projects</a>
+        <a href="vexify.github.io" class="button">Home</a>
+        <a href="about.html" class="button">About</a>
+        </center>
+        <center>
