--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ p.main {
         <h2>Programmer,Editor</h2>
         <hr>
         <a href="projects.html" class="button">Projects</a>
-        <a href="vexify.github.io" class="button">Home</a>
+        <a href="index.html" class="button">Home</a>
         <a href="about.html" class="button">About</a>
         </center>
         <center>
