--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,43 @@
+<html>
+    <head><title>Vexify4</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="main.css">
+<style>
+.button {
+  background-color: #32a4a8;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+</style>
+<style>
+h1 {
+  text-align: center;
+}
 
+p.image {
+  text-align: left;
+}
+
+p.main {
+  text-align: justify;
+}
+</style>
+    </head>
+    <body>
+        <center><h1>Vexify4</h1>
+        <h2>Programmer,Editor</h2>
+        <hr>
+        <a href="projects.html" class="button">Projects</a>
+        <a href="index.html" class="button">Home</a>
+        <a href="about.html" class="button">About</a>
+        </center>
+        <center>
+    </html>
