--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ p.main {
         <a href="projects.html" class="button">Projects</a>
         <a href="index.html" class="button">Home</a>
         <a href="about.html" class="button">About</a>
+        <hr>
+        <h2>Welcome to my website</h2>
         </center>
         <center>
     </html>
