--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="main.css">
+        <script data-ad-client="ca-pub-9897725804751698" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body>
         <center><h1>Vexify4</h1>
