--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,11 @@
         <a href="projects.html" class="button">Projects</a>
         <a href="index.html" class="button">Home</a>
         <a href="about.html" class="button">About</a>
-        </center>
+        <table border="0">
+            <tbody>
+            <tr>
+            <td>&nbsp;<center><img src="https://raw.githubusercontent.com/Vexify4/MCSkinInstant/main/100.ico" alt="MCSkinInstant" width="100" height="100" /><br /> <a href="vexify4.github.io/MCSkinInstant">MCSkinInstant</a><br /> A program that lets you<br/>install and view mincecraft skins.</center></td>
+            <td>&nbsp;<center><img src="https://github.com/3kh0/3kh0.github.io/raw/main/img/58097612.jpg" alt="3kh0" width="100" height="100" /><br /> <a href="https://3kh0.github.io/games">3kh0's Unblocked Games</a><br /> A unblocked games website <br />I have contubited to.</center></td>
+            <td>&nbsp;<center><img src="https://dobloxstudios.github.io/images/doblox.jpg" alt="Doblox Studios" width="100" height="100" /><br /> <a href="https://dobloxstudios.github.io">Doblox Studuios</a><br /> Be a snake and eat <br />all of the fruits. Be healthy!</center></td>
         <center>
     </html>
