--- a/about.html
+++ b/about.html
@@ -13,10 +13,6 @@
         <a href="index.html" class="button">Home</a>
         <a href="about.html" class="button">About</a>
         </center>
-        <center>
-            <h2>About me</h2>
-         <p>Hello, I am a programer who makes programs and other</p><p> things.I am the editor/owner of Summerwalk </p><p>Moives.I am also the owner of AL Techonlolgy's</p> 
-         <center>
-             <img src="Vexify4.jpg" alt="Vexify PFP" width="309.5" height="360" style="vertical-align:left;margin:50px 0px">
+         <p class="abouttxt">Hello, I am a programer who makes programs and other</p><p class="abouttxt"> things. I am the editor/owner of Summerwalk</p><p class="abouttxt">Moives. I am also the owner of Doblox Studios</p> 
+             <img src="Vexify4.jpg" alt="Vexify PFP" width="230" height="280" class="vexifyimg">
     </body>
-        <center>
