--- a/tools.html
+++ b/tools.html
@@ -15,8 +15,9 @@
         <table border="0">
             <tbody>
             <tr>
-            <td>&nbsp;<center><img src="images/hammer.png" alt="Tools" width="100" height="100" /><br /> <a href="tools.html">Tools</a><br />Tools for you to use<br/></center></td>
-            <td>&nbsp;<center><img src="images/joystick.png" alt="Games" width="100" height="100" /><br /> <a href="games.html">Games</a><br /> Games for you to play <br/></center></td>
-            <td>&nbsp;<center><img src="images/random.png" alt="Random" width="100" height="100" /><br /> <a href="random.html">Random Stuff</a><br />Stuff<br/></center></td>
-        <center>
+            <td>&nbsp;<center><img src="https://raw.githubusercontent.com/Vexify4/MCSkinInstant/main/100.ico" alt="Tools" width="100" height="100" /><br /> <a href="https://github.com/Vexify4/MCSkinInstant">MCSkinInstant</a><br/>Download View Skins<br/></center></td>
+            <td>&nbsp;<center><img src="images/autoclicker.png" alt="Tools" width="100" height="100" /><br /> <a href="https://github.com/Vexify4/AutoClicker">Autoclicker</a><br/>It does what it says<br/></center></td>
+            <br>
+            </tr>
+            </tbody>
     </html>
