--- a/games.html
+++ b/games.html
@@ -12,11 +12,5 @@
         <a href="projects.html" class="button">Projects</a>
         <a href="index.html" class="button">Home</a>
         <a href="about.html" class="button">About</a>
-        <table border="0">
-            <tbody>
-            <tr>
-            <td>&nbsp;<center><img src="images/hammer.png" alt="Tools" width="100" height="100" /><br /> <a href="tools.html">Tools</a><br />Tools for you to use<br/></center></td>
-            <td>&nbsp;<center><img src="images/joystick.png" alt="Games" width="100" height="100" /><br /> <a href="games.html">Games</a><br /> Games for you to play <br/></center></td>
-            <td>&nbsp;<center><img src="images/random.png" alt="Random" width="100" height="100" /><br /> <a href="random.html">Random Stuff</a><br />Stuff<br/></center></td>
-        <center>
+        <h1>Nothing Yet</h1>
     </html>
