--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
         <a href="index.html" class="button">Home</a>
         <a href="about.html" class="button">About</a>
         <hr>
-            <h1 style="font-size:50px;"><404></h1>
+            <h1 style="font-size:50px;">404</h1>
         <h2>Not sure how you got here</h2>
         <h1></h1>
         </center>
