--- a/games.html
+++ b/games.html
@@ -12,5 +12,5 @@
         <a href="projects.html" class="button">Projects</a>
         <a href="index.html" class="button">Home</a>
         <a href="about.html" class="button">About</a>
-        <h1>Nothing Yet</h1>
+        <td>&nbsp;<center><img src="images/hammer.png" alt="Tools" width="100" height="100" /><br /> <a href="vexify4.github.io/HTMLGame">HTMLGame</a><br />A new rythem game hits the scene<br/></center></td>
     </html>
