--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <a href="about.html" class="button">About</a>
         <hr>
         <h2>Welcome to my website</h2>
-        <h1></h1>
+            <br>
+        <h1>Check Out My New Game</h1>
+            <a href="HTMLGame">HTMLGame<a/>
         </center>
         <center>
     </html>
