--- a/random.html
+++ b/random.html
@@ -12,5 +12,5 @@
         <a href="projects.html" class="button">Projects</a>
         <a href="index.html" class="button">Home</a>
         <a href="about.html" class="button">About</a>
-        <td>&nbsp;<center><img src="https://i.insider.com/602ee9ced3ad27001837f2ac" alt="RickRoll" width="100" height="100" /><br /><a href="RickRollJavaScript">Prank Your Friends</a><br/><br/></center></td>
+        <td>&nbsp;<center><img src="https://i.insider.com/602ee9ced3ad27001837f2ac" alt="RickRoll" width="100" height="100" /><br /><a href="RickRollJavaScript">RickRollJavaScript</a><br/>Prank Your Friends<br/></center></td>
     </html>
