--- a/about.html
+++ b/about.html
@@ -14,5 +14,7 @@
         <a href="about.html" class="button">About</a>
         </center>
          <p class="abouttxt">Hello, I am a programer who makes programs and other</p><p class="abouttxt"> things. I am the editor/owner of Summerwalk</p><p class="abouttxt">Moives. I am also the owner of Doblox Studios</p> 
-             <img src="Vexify4.jpg" alt="Vexify PFP" width="230" height="280" class="vexifyimg">
+            
+             <div class="addthis_inline_follow_toolbox"></div>
+             <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6178ae91d36ebf45"></script>
     </body>
