--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <a href="about.html" class="button">About</a>
         <hr>
         <h2>Welcome to my website</h2>
-            <br>
-        <h1>Check Out My New Game</h1>
-            <a href="HTMLGame">HTMLGame<a/>
+        <h1>Feel Free To Us The Comment Box If People Ruin It I Will Shut It Down Dont Be That Guy</h1>
+        <div class="commentbox"></div>
+<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+<script>commentBox('my-project-id')</script>
         </center>
         <center>
     </html>
