--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,6 @@
             <td>&nbsp;<center><img src="images/hammer.png" alt="Tools" width="150" height="150" /><br /> <a href="tools.html">Tools</a><br />Tools for you to use<br/></center></td>
             <td>&nbsp;<center><img src="images/joystick.png" alt="Games" width="150" height="150" /><br /> <a href="games.html">Games</a><br /> Games for you to play <br/></center></td>
             <td>&nbsp;<center><img src="images/random.png" alt="Random" width="150" height="150" /><br /> <a href="random.html">Random Stuff</a><br />Stuff<br/></center></td>
-            <td>&nbsp;<center><img src="images/docs.png" alt="Docs" width="150" height="150" /><br /> <a href="Docs">HTML and CSS Documenttion</a><br />Documentation<br/></center></td>
+            <td>&nbsp;<center><img src="images/docs.png" alt="Docs" width="150" height="150" /><br /> <a href="Docs">HTML and CSS Documenttion</a><br /><br/></center></td>
         <center>
     </html>
