--- a/about.html
+++ b/about.html
@@ -17,4 +17,9 @@
              <img src="Vexify4.jpg" alt="Vexify PFP" width="230" height="280" class="vexifyimg">
              <div class="sharethis-inline-follow-buttons"></div>
              <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=617a05032c621500122dddfc&product=inline-follow-buttons" async="async"></script>
+        <center>
+            <div class="github-card" data-user="lepture"></div>
+<script src="https://cdn.jsdelivr.net/gh/lepture/github-cards@latest/jsdelivr/widget.js"></script>
+
+        </center>
     </body>
