--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
              <div class="sharethis-inline-follow-buttons"></div>
              <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=617a05032c621500122dddfc&product=inline-follow-buttons" async="async"></script>
         <center>
-            <div class="github-card" data-user="lepture"></div>
+            <div class="github-card" data-user="Vexify4"></div>
 <script src="https://cdn.jsdelivr.net/gh/lepture/github-cards@latest/jsdelivr/widget.js"></script>
 
         </center>
