--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="main.css">
         <script data-ad-client="ca-pub-9897725804751698" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <center><h1>Vexify4</h1>
@@ -15,6 +16,10 @@
         </center>
          <p class="abouttxt">Hello, I am a programer who makes programs and other</p><p class="abouttxt"> things. I am the editor/owner of Summerwalk</p><p class="abouttxt">Moives. I am also the owner of Doblox Studios</p> 
              <img src="Vexify4.jpg" alt="Vexify PFP" width="230" height="280" class="vexifyimg">
+             <hr class="aboutline">
+             <center>
+                <h3>So, I am Vexify4 I thought I might make this just to give you some more backstory about my self so I am self taught web developer who stated at around 8 or 9 and do this in my free time. I have only taken two classes before which did not last that long if you want to learn web developement you should just want youtube videos or go check out my HTMl and CSS documentation. My goal is to go to harvard with a degree in computer science, and work in web developement, I am also writing this because I need more content on my site and this is my only way to do it. Thanks for reading and chercking out my website, you are a legend.</h3>
+             </center>
              <div class="sharethis-inline-follow-buttons"></div>
              <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=617a05032c621500122dddfc&product=inline-follow-buttons" async="async"></script>
     </body>
