--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="main.css">
         <script data-ad-client="ca-pub-9897725804751698" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=.7">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <center><h1>Vexify4</h1>
